--- a/donations.html
+++ b/donations.html
@@ -370,7 +370,7 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
     <script>
         function selectDonation(amount) {
             document.getElementById('customAmount').value = amount;
