--- a/gallery.html
+++ b/gallery.html
@@ -311,7 +311,7 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
     <script>
         // Gallery filtering
         function filterGallery(category) {
